# dynamic-rendering-vulkan

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.old.txt  CMakeLists.txt  CMakeUserPresets.json  compile_commands.json  conanfile.py  imgui.ini
.github/workflows/: build.yml
.run/: Client.run.xml
assets/blueprints/: bloom_downsample.yaml  bloom_extract.yaml  bloom_final_upsample.yaml  bloom_horizontal.yaml  bloom_vertical.yaml  colour_correction.yaml  composite.yaml  compute_culling.yaml  cull_prefix_sum_distribute.yaml  cull_prefix_sum_first.yaml  cull_prefix_sum_second.yaml  cull_scatter.yaml  cull_visibility.yaml  environment_map.yaml  gizmo.yaml  identifier.yaml  light_culling.yaml  line.yaml  main_geometry.yaml  main_geometry_blueprint.yaml  point_lights.yaml  shadow.yaml  shadow_gui.yaml  skybox.yaml  test_compute.yaml  z_prepass.yaml
assets/fonts/: .gitignore
assets/meshes/: .gitignore
assets/meshes/default/: sphere.glb
assets/shaders/: bloom_downsample.comp  bloom_downsample.frag  bloom_extract.comp  bloom_horizontal.comp  bloom_horizontal.frag  bloom_upsample.comp  bloom_upsample.frag  bloom_vertical.comp  bloom_vertical.frag  colour_correction.frag  composite.frag  compute_culling.comp  fullscreen.vert  geometry.frag  geometry.frag.spv  geometry.vert  geometry.vert.spv  geometry_debug.frag  gizmo.frag  gizmo.vert  identifier.frag  identifier.vert  light_culling.comp  line.frag  line.vert  point_lights.frag  point_lights.vert  shadow.vert  shadow_gui.frag  skybox.frag  skybox.vert  test.comp  test.comp.spv  z_prepass.vert
assets/shaders/culling/: cull_prefix_sum_distribute.comp  cull_prefix_sum_first.comp  cull_prefix_sum_second.comp  cull_scatter.comp  cull_visibility.comp
assets/shaders/include/: gaussian.glsl  material.glsl  matrix_math.glsl  set0.glsl  tiling_constants.glsl
assets/techniques/: point_lights.yaml  shadow_gui.yaml
client/: CMakeLists.txt
client/include/: file_browser.hpp
client/src/: app_layer.cpp  app_layer.hpp  file_browser.cpp  main.cpp
conan/profiles/: clang  gcc
include/dynamic_rendering/: dynamic_rendering.hpp  dynamic_rendering_pch.hpp
include/dynamic_rendering/assets/: asset_allocator.hpp  handle.hpp  handle.inl  loader.hpp  manager.hpp  pointer.hpp
include/dynamic_rendering/assets/loaders/: material_loader.inl  static_mesh_loader.inl  texture_loader.inl
include/dynamic_rendering/core/: allocator.hpp  app.hpp  asset_file_watcher.hpp  asset_reloader.hpp  command_buffer.hpp  config.hpp  debug_utils.hpp  device.hpp  event_system.hpp  extent.hpp  forward.hpp  fs.hpp  gpu_buffer.hpp  image.hpp  image_array.hpp  image_configuration.hpp  image_transition.hpp  input.hpp  instance.hpp  logger.hpp  material_yaml_file_watcher.hpp  random.hpp  sampler_manager.hpp  semaphore.hpp  util.hpp  vulkan_util.hpp
include/dynamic_rendering/core/logger/: formatters.inl
include/dynamic_rendering/pipeline/: blueprint_configuration.hpp  blueprint_registry.hpp  compiled_pipeline.hpp  compute_pipeline_factory.hpp  ipipeline_factory.hpp  pipeline_error.hpp  pipeline_factory.hpp  shader.hpp  yaml_converters.hpp
include/dynamic_rendering/renderer/: camera.hpp  descriptor_allocator.hpp  descriptor_manager.hpp  draw_command.hpp  draw_list_manager.hpp  editor_camera.hpp  environments.hpp  frustum.hpp  layer.hpp  material.hpp  material_bindings.hpp  material_data.hpp  mesh.hpp  mesh_cache.hpp  point_light.hpp  point_light_system.hpp  renderer.hpp  renderer_util.hpp
include/dynamic_rendering/renderer/passes/: bloom_pass.hpp
include/dynamic_rendering/renderer/techniques/: fullscreen_technique.hpp  point_lights_technique.hpp  shadow_gui_technique.hpp
include/dynamic_rendering/scene/: components.hpp  entity.hpp  entity.inl  scene.hpp
include/dynamic_rendering/window/: gui_system.hpp  swapchain.hpp  window.hpp  window_configuration.hpp
scripts/: compile_shaders.py  downsample.py  watch_compile.py
src/: allocator.cpp  allocator.hpp  camera.cpp  camera.hpp  command_buffer.cpp  command_buffer.hpp  config.hpp  device.cpp  device.hpp  editor_camera.hpp  event_system.hpp  forward.hpp  gpu_buffer.cpp  gpu_buffer.hpp  gui_system.cpp  gui_system.hpp  image.cpp  image.hpp  image_configuration.hpp  image_transition.hpp  input.cpp  input.hpp  instance.hpp  layer.cpp  layer.hpp  main.cpp  material.cpp  material.hpp  material_bindings.cpp  material_bindings.hpp  renderer.cpp  renderer.hpp  sampler_manager.hpp  swapchain.cpp  swapchain.hpp  util.hpp  window.cpp  window.hpp
src/assets/: manager.cpp
src/core/: allocation_operations.cpp  allocator.cpp  app.cpp  asset_file_watcher.cpp  asset_reloader.cpp  asset_reloader.hpp  command_buffer.cpp  debug_utils.cpp  device.cpp  event_system.cpp  fs.cpp  gpu_buffer.cpp  image.cpp  image_array.cpp  input.cpp  logger.cpp  material_yaml_file_watcher.cpp  random.cpp  semaphore.cpp  vulkan_util.cpp
src/pipeline/: blueprint_configuration.cpp  blueprint_configuration.hpp  blueprint_registry.cpp  blueprint_registry.hpp  compiled_pipeline.cpp  compiled_pipeline.hpp  compute_pipeline_factory.cpp  compute_pipeline_factory.hpp  ipipeline_factory.hpp  pipeline_factory.cpp  pipeline_factory.hpp  shader.cpp  shader.hpp  yaml_converters.hpp
src/renderer/: camera.cpp  descriptor_allocator.cpp  descriptor_manager.cpp  draw_command.cpp  draw_list_manager.cpp  layer.cpp  material.cpp  material_bindings.cpp  mesh.cpp  mesh_cache.cpp  point_light_system.cpp  renderer.cpp
src/renderer/passes/: bloom_pass.cpp
src/renderer/techniques/: fullscreen_technique.cpp  point_lights_technique.cpp  shadow_gui_technique.cpp
src/scene/: components.cpp  entity.cpp  scene.cpp
src/window/: gui_system.cpp  swapchain.cpp  window.cpp  window_configuration.cpp
